--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "cors": "^2.8.5",
+    "element-plus": "^2.11.7",
     "express": "^5.1.0",
     "node-fetch": "^2.7.0",
     "vue": "^3.5.22"
